navbar scroll and right side extra padding  pbm solve

--- a/src/style.css
+++ b/src/style.css
@@ -269,7 +269,7 @@ ul {
   display: flex;
   flex-flow: row;
   justify-content: left;
-  font-size: 15px;
+  font-size: 17px;
   width: 100%;
   line-height: 1.75rem;
   padding-top: 0.5rem;
